--- a/_includes/social-media-share-bar.html
+++ b/_includes/social-media-share-bar.html
@@ -1,4 +1,4 @@
-<div class="a2a_kit a2a_kit_size_20 a2a_default_style" style="display: flex; justify-content: center; margin-top: .5rem;">
+<div class="a2a_kit a2a_kit_size_20 a2a_default_style" style="display: flex; margin-top: 2rem;">
     <a class="a2a_dd" href="https://www.addtoany.com/share"></a>
     <a class="a2a_button_email" title="Send page by email"></a>
     <a class="a2a_button_facebook" title="Share on Facebook"></a>
