--- a/_includes/publication-date-information.html
+++ b/_includes/publication-date-information.html
@@ -16,15 +16,11 @@
     {% endif %}
   </dl>
 
-
-  <button class="btn btn-default"
-          data-container="body"
-          data-toggle="popover"
-          data-trigger="click hover"
-          data-placement="auto"
-          id="pubInfoPopover">
-          <i class="fa fa-calendar" aria-hidden="true"></i>
-  </button>
+  <a tabindex="0"
+     role="button"
+     data-toggle="popover"
+     data-trigger="click focus hover"
+     id="pubInfoPopover">{{ page.date | date: "%e %B %Y" }}</a>
 
   <script>
     $(function () {
