--- a/_includes/social-media-share-custom-button.html
+++ b/_includes/social-media-share-custom-button.html
@@ -1,3 +1,3 @@
-<button class="a2a_dd btn btn-default" href="https://www.addtoany.com/share">
+<a class="a2a_dd" href="https://www.addtoany.com/share">
   <i class="fa fa-share-alt" aria-hidden="true"></i>
-</button>
+</a>
